--- a/style.less
+++ b/style.less
@@ -49,7 +49,7 @@ body {
 		display: grid;
 		grid-template: "carousel ." "map detail" "booking .";
 		grid-template-rows: 100vh 100vh 100vh;
-		grid-template-columns: 100vw 400px;
+		grid-template-columns: 100vw 50vw;
 		transition: all 1s;
 
 		#carousel {
@@ -80,7 +80,7 @@ body {
 		}
 
 		#details.open {
-			left: -400px;
+			left: -50vw;
 		}
 
 		#booking {
