--- a/style.less
+++ b/style.less
@@ -37,7 +37,7 @@ body {
 		scroll-snap-destination: 0 100%;
 		scroll-snap-points-y: repeat(100vh);
 		scroll-snap-type: y mandatory;
-
+		&::-webkit-scrollbar { width: 0 !important }
 		.page {
 			scroll-snap-align: center;
 			display: flex;
