--- a/style.less
+++ b/style.less
@@ -88,7 +88,24 @@ body {
 		}
 	}
 }
+.multibar {
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
 
+	&:before,&:after {
+		content: "";
+		flex-grow: 1;
+	}
+
+	& > .left {
+		order: -1;
+	}
+
+	& > .right {
+		order: 1;
+	}
+}
 header {
 	position: relative;
 	z-index: 500;
