--- a/style.less
+++ b/style.less
@@ -114,7 +114,9 @@ header {
 	color: var(--fg-main);
 	box-shadow: 0 2.5px 15px 2.5px rgba(0,0,0,0.75);
 }
-
+canvas {
+	border:1px solid silver;
+}
 #mapid {
 	min-height: 50px;
 }
