--- a/style.less
+++ b/style.less
@@ -157,3 +157,60 @@ canvas {
 		}
 	}
 }
+.group0,
+.group25,
+.group50,
+.group75,
+.group100,
+.station0,
+.station25,
+.station50,
+.station75,
+.station100 {
+	display:flex;
+	justify-content: center;
+	align-items: center;
+	width:50px;
+	height:50px;
+	border-radius:50%;
+	background:white;
+	border:5px solid red;
+	//box-shadow: 1px 1px 6px black;
+}
+.group0,
+.group25,
+.group50,
+.group75,
+.group100 {
+	&:before,&:after{
+		border-radius:50%;
+		position:absolute;
+		width:35px;
+		height:35px;
+		border: 5px solid rgba(0,0,0,0.5);
+		content:" ";
+	}
+	&:after{
+		width:45px;
+		height:45px;
+	}
+}
+
+.station0,
+.station25,
+.station50,
+.station75,
+.station100 {
+	border-bottom-left-radius: 0;
+}
+
+.group0,
+.station0 {border-color:#c92026; &:before{border-color:fadeout(#c92026, 50%);} &:after{border-color:fadeout(#c92026, 75%);}}
+.group25,
+.station25 {border-color:#c96f20; &:before{border-color:fadeout(#c96f20, 50%);} &:after{border-color:fadeout(#c96f20, 75%);}}
+.group50,
+.station50 {border-color:#c9c420; &:before{border-color:fadeout(#c9c420, 50%);} &:after{border-color:fadeout(#c9c420, 75%);}}
+.group75,
+.station75 {border-color:#7ac920; &:before{border-color:fadeout(#7ac920, 50%);} &:after{border-color:fadeout(#7ac920, 75%);}}
+.group100,
+.station100 {border-color:#2097c4; &:before{border-color:fadeout(#2097c4, 50%);} &:after{border-color:fadeout(#2097c4, 75%);}}
