--- a/style.css
+++ b/style.css
@@ -100,10 +100,16 @@ body .pager #booking {
 header {
   position: relative;
   z-index: 500;
-  padding: 1px 20px;
+  padding: 1px 10px;
   background: var(--bg-main);
   color: var(--fg-main);
   box-shadow: 0 2.5px 15px 2.5px rgba(0, 0, 0, 0.75);
+}
+header > * {
+  margin: 10px;
+}
+header a {
+  color: var(--fg-main);
 }
 canvas {
   border: 1px solid silver;
@@ -161,30 +167,30 @@ canvas {
   background: white;
   border: 5px solid red;
 }
-.group0:before,
-.group25:before,
-.group50:before,
-.group75:before,
-.group100:before,
-.group0:after,
-.group25:after,
-.group50:after,
-.group75:after,
-.group100:after {
-  border-radius: 50%;
-  position: absolute;
-  width: 35px;
-  height: 35px;
-  border: 5px solid rgba(0, 0, 0, 0.5);
-  content: " ";
+.group0,
+.station0 {
+  border-color: #c92026;
+  box-shadow: 0px 0px 20px 5px #c92026;
 }
-.group0:after,
-.group25:after,
-.group50:after,
-.group75:after,
-.group100:after {
-  width: 45px;
-  height: 45px;
+.group25,
+.station25 {
+  border-color: #c96f20;
+  box-shadow: 0px 0px 20px 5px #c96f20;
+}
+.group50,
+.station50 {
+  border-color: #c9c420;
+  box-shadow: 0px 0px 20px 5px #c9c420;
+}
+.group75,
+.station75 {
+  border-color: #7ac920;
+  box-shadow: 0px 0px 20px 5px #7ac920;
+}
+.group100,
+.station100 {
+  border-color: #2097c4;
+  box-shadow: 0px 0px 20px 5px #2097c4;
 }
 .station0,
 .station25,
@@ -192,64 +198,5 @@ canvas {
 .station75,
 .station100 {
   border-bottom-left-radius: 0;
-}
-.group0,
-.station0 {
-  border-color: #c92026;
-}
-.group0:before,
-.station0:before {
-  border-color: rgba(201, 32, 38, 0.5);
-}
-.group0:after,
-.station0:after {
-  border-color: rgba(201, 32, 38, 0.25);
-}
-.group25,
-.station25 {
-  border-color: #c96f20;
-}
-.group25:before,
-.station25:before {
-  border-color: rgba(201, 111, 32, 0.5);
-}
-.group25:after,
-.station25:after {
-  border-color: rgba(201, 111, 32, 0.25);
-}
-.group50,
-.station50 {
-  border-color: #c9c420;
-}
-.group50:before,
-.station50:before {
-  border-color: rgba(201, 196, 32, 0.5);
-}
-.group50:after,
-.station50:after {
-  border-color: rgba(201, 196, 32, 0.25);
-}
-.group75,
-.station75 {
-  border-color: #7ac920;
-}
-.group75:before,
-.station75:before {
-  border-color: rgba(122, 201, 32, 0.5);
-}
-.group75:after,
-.station75:after {
-  border-color: rgba(122, 201, 32, 0.25);
-}
-.group100,
-.station100 {
-  border-color: #2097c4;
-}
-.group100:before,
-.station100:before {
-  border-color: rgba(32, 151, 196, 0.5);
-}
-.group100:after,
-.station100:after {
-  border-color: rgba(32, 151, 196, 0.25);
+  box-shadow: 1px 1px 10px black;
 }
