--- a/style.css
+++ b/style.css
@@ -200,3 +200,14 @@ canvas {
   border-bottom-left-radius: 0;
   box-shadow: 1px 1px 10px black;
 }
+.book {
+  /* Add shadows to create the "card" effect */
+  margin: 20px;
+  padding: 10px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+}
+/* On mouse-over, add a deeper shadow */
+.book:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
