--- a/style.less
+++ b/style.less
@@ -161,6 +161,10 @@ canvas {
 			order: 1;
 			font-size:150%;
 		}
+		.play,.pause{
+			order:1;
+		}
+		.hidden {display:none;}
 	}
 }
 .group0,
@@ -214,4 +218,8 @@ canvas {
 /* On mouse-over, add a deeper shadow */
 .book:hover {
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.active{
+	background:yellow;
 }
