--- a/style.less
+++ b/style.less
@@ -1,34 +1,31 @@
 // out: style.css
 
 :root {
-	--bg-neutral: #e1e2e1;
-	--fg-neutral: #000000;
-	--bg-neutral-light: #F5F5F6;
-	--fg-neutral-light: #000000;
-	--bg-neutral-dark: #F5F5F6;
-	--fg-neutral-dark: #000000;
-	--bg-main: #1e88e5;
-	--fg-main: #000000;
-	--bg-light: #6ab7ff;
-	--fg-light: #000000;
-	--bg-dark: #005cb2;
-	--fg-dark: #ffffff;
+	--neutralLightColor: #F5F5F6;
+	--neutralColor: #e1e2e1;
+	--neutralDarkColor: #d0d0d0;
+	--primaryColor: #039be5;
+	--primaryLightColor: #63ccff;
+	--primaryDarkColor: #006db3;
+	--secondaryColor: #673ab7;
+	--secondaryLightColor: #9a67ea;
+	--secondaryDarkColor: #320b86;
+	--neutralTextLightColor: #ffffff;
+	--neutralTextDarkColor: #000000;
+	--primaryTextColor: #212121;
+	--secondaryTextColor: #ce93d8;
 	font-family: 'Roboto', sans-serif;
 	scroll-behavior: smooth;
 }
-/*
-*:hover {
-	outline:red 1px dotted;
-	background:rgba(255,0,0,0.1);
-}
-*/
+
 body {
 	margin: 0;
-	height:100vh;
-	display:flex;
+	height: 100vh;
+	display: flex;
 	flex-direction: column;
 	overflow-x: hidden;
-	.pager {
+
+	& > .pager {
 		width: 100%;
 		overflow-x: hidden;
 		overflow-y: scroll;
@@ -37,7 +34,16 @@ body {
 		scroll-snap-destination: 0 100%;
 		scroll-snap-points-y: repeat(100vh);
 		scroll-snap-type: y mandatory;
-		&::-webkit-scrollbar { width: 0 !important }
+		display: grid;
+		grid-template: "carousel ." "map detail" "booking .";
+		grid-template-rows: 100vh 100vh 100vh;
+		grid-template-columns: 100vw 50vw;
+		transition: all 1s;
+
+		&::-webkit-scrollbar {
+			width: 0 !important;
+		}
+
 		.page {
 			scroll-snap-align: center;
 			display: flex;
@@ -46,11 +52,6 @@ body {
 			align-items: stretch;
 			align-content: stretch;
 		}
-		display: grid;
-		grid-template: "carousel ." "map detail" "booking .";
-		grid-template-rows: 100vh 100vh 100vh;
-		grid-template-columns: 100vw 50vw;
-		transition: all 1s;
 
 		#carousel {
 			grid-area: carousel;
@@ -88,12 +89,14 @@ body {
 		}
 	}
 }
+
 .multibar {
 	display: flex;
 	flex-wrap: wrap;
 	align-items: center;
 
-	&:before,&:after {
+	&:after,
+	&:before {
 		content: "";
 		flex-grow: 1;
 	}
@@ -106,23 +109,28 @@ body {
 		order: 1;
 	}
 }
+
 header {
 	position: relative;
 	z-index: 500;
 	padding: 1px 10px;
-	background: var(--bg-main);
-	color: var(--fg-main);
+	background: var(--primaryColor);
+	color: var(--neutralTextDarkColor);
 	box-shadow: 0 2.5px 15px 2.5px rgba(0,0,0,0.75);
-	&>*{
-		margin:10px;
+
+	& > * {
+		margin: 10px;
 	}
+
 	a {
-		color:var(--fg-main);
+		color: var(--neutralTextDarkColor);
 	}
 }
+
 canvas {
-	border:1px solid silver;
+	border: 1px solid var(--neutralDarkColor);
 }
+
 #mapid {
 	min-height: 50px;
 }
@@ -136,6 +144,16 @@ canvas {
 		width: 100%;
 		display: flex;
 		padding: 0;
+		text-shadow: 1px 1px 5px black;
+		color: white;
+
+		.active,
+		.next,
+		.pause,
+		.play,
+		.prev {
+			color: var(--primaryLightColor);
+		}
 
 		&:after,
 		&:before {
@@ -152,74 +170,160 @@ canvas {
 			align-items: center;
 		}
 
+		.next,
+		.prev {
+			font-size: 200%;
+		}
+
 		.prev {
 			order: -1;
-			font-size:150%;
 		}
 
 		.next {
 			order: 1;
-			font-size:150%;
 		}
-		.play,.pause{
-			order:1;
+
+		.pause,
+		.play {
+			order: 1;
 		}
-		.hidden {display:none;}
+
+		.hidden {
+			display: none;
+		}
+	}
+
+	position: relative;
+	background: var(--neutralDarkColor);
+	.slides {
+		.slide {
+			position:relative;
+			display:flex;
+			flex-direction: column;
+			justify-content: center;
+			align-items: center;
+			&:before {
+				z-index:0;
+				position:absolute;
+				width:100%;
+				height:100%;
+				display:flex;
+				font-size:75vh;
+				color:var(--neutralColor);
+				justify-content: center;
+				align-items: center;
+			}
+			*{
+				position:relative;
+				z-index:1;
+			}
+			h3{
+
+				text-align:center;
+				font-size:2em;
+			}
+			p {
+				text-align:justify;
+				max-width:600px;
+				margin:0 auto;
+				padding:20px;
+			}
+			a {
+				margin:20px;
+				padding:10px 15px;
+				text-decoration: none;
+				border-radius:5px;
+				background:var(--secondaryColor);
+				color:var(--neutralTextLightColor);
+			}
+			transition: all 1s;
+			position: absolute;
+			left: -100%;
+			opacity: 0;
+			width: 100%;
+			height: 100%;
+
+			&.active {
+				opacity: 100;
+				left: 0;
+
+				&~* {
+					opacity: 0;
+					left: 100%;
+				}
+			}
+		}
 	}
 }
+
 .group0,
+.group100,
 .group25,
 .group50,
 .group75,
-.group100,
 .station0,
+.station100,
 .station25,
 .station50,
-.station75,
-.station100 {
-	display:flex;
+.station75 {
+	display: flex;
 	justify-content: center;
 	align-items: center;
-	width:50px;
-	height:50px;
-	border-radius:50%;
-	background:white;
-	border:5px solid red;
+	width: 50px;
+	height: 50px;
+	border-radius: 50%;
+	background: white;
+	border: 5px solid red;
 }
 
 .group0,
-.station0 {border-color:#c92026; box-shadow: 0px 0px 20px 5px #c92026;}
+.station0 {
+	border-color: #c92026;
+	box-shadow: 0 0 20px 5px #c92026;
+}
+
 .group25,
-.station25 {border-color:#c96f20; box-shadow: 0px 0px 20px 5px #c96f20;}
+.station25 {
+	border-color: #c96f20;
+	box-shadow: 0 0 20px 5px #c96f20;
+}
+
 .group50,
-.station50 {border-color:#c9c420; box-shadow: 0px 0px 20px 5px #c9c420;}
+.station50 {
+	border-color: #c9c420;
+	box-shadow: 0 0 20px 5px #c9c420;
+}
+
 .group75,
-.station75 {border-color:#7ac920; box-shadow: 0px 0px 20px 5px #7ac920;}
+.station75 {
+	border-color: #7ac920;
+	box-shadow: 0 0 20px 5px #7ac920;
+}
+
 .group100,
-.station100 {border-color:#2097c4; box-shadow: 0px 0px 20px 5px #2097c4;}
+.station100 {
+	border-color: #2097c4;
+	box-shadow: 0 0 20px 5px #2097c4;
+}
 
 .station0,
+.station100,
 .station25,
 .station50,
-.station75,
-.station100 {
+.station75 {
 	border-bottom-left-radius: 0;
 	box-shadow: 1px 1px 10px black;
 }
 
 .book {
-  /* Add shadows to create the "card" effect */
-  margin:20px;
-  padding:10px;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
+	/* Add shadows to create the "card" effect */
+	margin: 20px;
+	padding: 10px;
+	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+	transition: 0.3s;
 }
-
 /* On mouse-over, add a deeper shadow */
-.book:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
 
-.active{
-	background:yellow;
+.book:hover {
+	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
